Fix page overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
   display: flex;
+  overflow: auto;
 }
 
 h1,
